misc/draft/.kube-draft.netpol-and-cm/restricted.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: api-allow
spec:
  podSelector:
    matchLabels:
      app: psql4demo
  ingress:
  - from:
      - podSelector:
          matchLabels:
            app: app4demo
#     - podSelector:
#         matchLabels:
#           app: notapp4demo
    ports:
    - protocol: TCP
      port: 5432
